--- a/less/general.less
+++ b/less/general.less
@@ -45,7 +45,7 @@ h4 {
 }
 
 p {
-    font-size: 2.8rem;
+    font-size: 2.4rem;
 
     @media @tablet {
         font-size: 2.2rem;
@@ -70,7 +70,7 @@ main {
 
 
 .first-background {
-    background-image: url("../images/journal.jpg");
+    background-image: url("../images/journal-compressed.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -197,7 +197,7 @@ main {
 }
 
 .sectionB {
-    margin-top: 20rem;
+    margin-top: 12rem;
     margin-left: 45%;
     display: block;
     flex-direction: column;
@@ -341,104 +341,119 @@ main {
 }
 
 .sectionC {
-    width: 100%;
-    height: auto;
-    background: @side-background;
-    display: flex;
-    justify-content: center;
 
-    @media @tablet {
-        h2 {
-            font-size: 2rem;
+    h2 {
+        background: @side-background;
+        color: white;
+        margin: 0;
+        border: none;
+        padding: 2rem;
+
+        @media @mobile {
+            display: flex;
+            justify-content: center;
         }
     }
-
-    @media @mobile {
-        flex-direction: column-reverse;
-        height: auto;
-    }
-
-
-    .indent {
-        height: auto;
-        width: 40rem;
-        border-radius: 2.5rem;
-        background: @main-font-color;
-        margin: 10% 10% 0 0%;
+    .C-content {
+        background: @side-background;
         display: flex;
-        justify-content: center;
-        flex-direction: flex-end;
+        justify-content: space-evenly;
         align-items: center;
-
+    
         @media @tablet {
-            justify-content: space-between;
-            flex-direction: row;
-            width: 30%;
-            margin: .5rem;
+            h2 {
+                font-size: 2rem;
+            }
         }
-
+    
         @media @mobile {
+            flex-direction: column-reverse;
             height: auto;
         }
-    }
-    img {
-        width: 80%;
-        max-width: 40vw;
-
-        @media @mobile {
-            margin: 2.5rem;
-            width: auto;
-        }
-    }
-
-    .text-container {
-        height: auto;
-        width: 50rem;
-        margin: 10% 20rem 0 10%;
-        font-style: @main-font;
-        color: @second-font-color;
-
-        @media @tablet {
-            width: 65%;
-            margin: .5rem;
-            display: flex;
-            justify-content: space-between
-        }
-
-        @media @mobile {
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            margin: .5rem 0;
+    
+        .text-container {
             height: auto;
+            width: 50rem;
+            font-style: @main-font;
+            color: @second-font-color;
+            margin: 1rem 4rem;
+    
+            @media @tablet {
+                width: 65%;
+                margin: .5rem;
+                display: flex;
+                justify-content: space-between
+            }
+    
+            @media @mobile {
+                display: flex;
+                flex-direction: column;
+                width: 100%;
+                margin: .5rem 0;
+                height: auto;
+            }
+        }
+
+        .indent {
+            height: 100%;
+            width: 35%;
+            border-radius: 2.5rem;
+            background: @main-font-color;
+            display: flex;
+            justify-content: center;
+            flex-direction: flex-end;
+            align-items: center;
+            margin: 1rem 4rem;
+    
+            @media @tablet {
+                height: 20%;
+                justify-content: center;
+                flex-direction: row;
+            }
+    
+            @media @mobile {
+                height: auto;
+            }
+        }
+        img {
+            width: 80%;
+            max-width: 40vw;
+            padding: 2rem 0;
+    
+            @media @tablet {
+                padding: 1.5rem 0;
+                margin: 2rem 0;
+                width: 90%;
+            }
+
+            @media @mobile {
+                margin: 2.5rem;
+                width: 90%;
+            }
+        }
+    
+        p {
+            font-size: 2rem;
+            padding: 0 1.5rem;
+    
+            @media @tablet {
+                width: 100%;
+                margin: .5rem;
+                font-size: 1.2rem;
+            }
+        }
+    
         }
     }
 
-    p {
-        font-size: 2rem;
-        padding: 0 1.5rem;
 
-        @media @tablet {
-            width: 100%;
-            margin: .5rem;
-            font-size: 1.2rem;
-        }
-    }
-
-    div {
-        @media @tablet {
-            width: 50%;
-            margin: .5rem;
-        }
-    }
-}
 
 /////////////////////////////////////////////////
 
 /////////////////////////////////////////////////
 //ABOUT US
 .sectionD {
-    background-image: url("../images/airplane_window.jpg");
+    background-image: url("../images/airplane_window_compressed.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
@@ -448,6 +463,8 @@ main {
 
     h2 {
         margin: 1rem 0;
+        display: flex;
+        justify-content: center;
     }
 
     .center-card{
@@ -476,7 +493,17 @@ main {
               img {
                 border-radius: 15px;
                 width: 100%;
-                max-width: 100%;
+              }
+              p{
+                font-size: 2rem;
+
+                @media @tablet {
+                    font-size: 1.8rem;
+                }
+            
+                @media @mobile {
+                    font-size: 1.1rem;
+                }
               }
         }
         
